--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 
 http {
     upstream backend {
-        server 127.0.0.1:8080;
+        server keycloak:8080;
     }
 
     limit_req_zone $binary_remote_addr zone=mylimit:10m rate=1r/s;
